# dataset-creator

./: .gitignore  CODEOWNERS  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: presubmit.yaml  python_build_and_test.yaml  run_presubmit.yaml  run_tests.yaml
setup/gcp/: Dockerfile  cloudbuild.yaml  configure_project.sh  database.ddl  vm_startup_script.sh
setup/riegeli_patches/: BUILD.patch  WORKSPACE.patch
src/: conftest.py
src/dataset_creator/: dataset_creator.py  dataset_creator_test.py  example_bank_shard_dataset.py  example_bank_shard_dataset_test.py  example_lib.py  example_lib_test.py  generated_dataset.py  generated_dataset_test.py  helpers.py  test_utils.py  test_utils_test.py
src/dataset_creator/environments/: base_database.py  base_environment.py  base_pipeline_runner.py
src/dataset_creator/environments/gcp/: gcp_database.py  gcp_database_test.py  gcp_environment.py  gcp_pipeline_runner.py  gcp_pipeline_runner_test.py  gcp_utils.py
src/dataset_creator/features/: base_feature.py  base_feature_test.py  base_filter.py  base_filter_test.py  fields.py  generic_lambda_feature.py  generic_lambda_feature_test.py  generic_typing.py  generic_typing_test.py  images_feature.py  images_feature_test.py  inference_feature.py  inference_feature_test.py  inference_model.py  inference_model_test.py  lambda_feature.py  lambda_feature_test.py  multi_lead_signal_feature.py  multi_lead_signal_feature_test.py  serializable.py  serializable_stateless_function.py  serializable_stateless_function_test.py  serializable_test.py
src/dataset_creator/features/signal_io/: base_signal_reader.py  brain_vision_reader.py  brain_vision_reader_test.py  continuous_reader.py  continuous_reader_test.py  edf_reader.py  edf_reader_test.py  eeglab_reader.py  eeglab_reader_test.py  mne_reader.py  mne_reader_test.py  signal_reader.py  (+5 more)
src/dataset_creator/pipeline/: beam_populator.py  beam_populator_test.py  dataflow_utils.py  dataflow_utils_test.py  example_bank_sink.py  pipeline_utils.py  pipeline_utils_test.py
src/dataset_creator/testdata/: positions-storage-test-00000-of-00002.riegeli  positions-storage-test-00001-of-00002.riegeli  storage-test-00000-of-00002.riegeli  storage-test-00001-of-00002.riegeli
(+22 files in other folders)
